[gd_scene load_steps=5 format=2]

[ext_resource path="res://weapons/Pistol/Pistol2.png" type="Texture" id=1]
[ext_resource path="res://weapons/Pistol/Pistol.png" type="Texture" id=2]
[ext_resource path="res://menus/assets/GunButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://menus/assets/ChooseCombinator.gd" type="Script" id=4]

[node name="ChooseCombinator" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.329412, 0.329412, 0.329412, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -186.0
margin_top = 71.0
margin_right = 186.0
margin_bottom = 37.0
text = "Choose guns to combine"

[node name="Guns" type="Node2D" parent="."]

[node name="Pistol" parent="Guns" instance=ExtResource( 3 )]
margin_left = 15.0
margin_top = 422.0
margin_right = 63.0
margin_bottom = 470.0
mk1_texture = ExtResource( 2 )
mk2_texture = ExtResource( 1 )

[node name="Combine" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -21.5
margin_right = 73.0
margin_bottom = 21.5
text = "Combine"

[node name="Combo1" parent="." instance=ExtResource( 3 )]
margin_left = 330.0
margin_top = 148.0
margin_right = 378.0
margin_bottom = 196.0
disabled = true

[node name="Combo2" parent="." instance=ExtResource( 3 )]
margin_left = 576.0
margin_top = 146.0
margin_right = 624.0
margin_bottom = 194.0
disabled = true

[connection signal="gun_selected" from="Guns/Pistol" to="." method="_on_gun_selected"]
[connection signal="pressed" from="Combine" to="." method="_on_Combine_pressed"]
